--- a/sdk/identity/azure_identity/Cargo.toml
+++ b/sdk/identity/azure_identity/Cargo.toml
@@ -15,7 +15,7 @@ edition.workspace = true
 [dependencies]
 async-lock.workspace = true
 async-trait.workspace = true
-azure_core = { workspace = true, default-features = false }
+azure_core.workspace = true
 futures.workspace = true
 openssl = { workspace = true, optional = true }
 pin-project.workspace = true
@@ -36,8 +36,7 @@ tokio.workspace = true
 tracing-subscriber.workspace = true
 
 [features]
-default = ["reqwest"]
-reqwest = ["azure_core/reqwest"]
+default = ["azure_core/default"]
 tokio = ["dep:tokio", "azure_core/tokio", "tokio/process"]
 client_certificate = ["openssl"]
 
