--- a/sdk/typespec/typespec_client_core/Cargo.toml
+++ b/sdk/typespec/typespec_client_core/Cargo.toml
@@ -20,7 +20,7 @@ gloo-timers = { workspace = true, optional = true }
 pin-project.workspace = true
 quick-xml = { workspace = true, optional = true }
 rand.workspace = true
-reqwest = { workspace = true, optional = true, features = ["deflate", "gzip"] }
+reqwest = { workspace = true, optional = true }
 rust_decimal = { workspace = true, optional = true }
 serde.workspace = true
 serde_json.workspace = true
@@ -55,13 +55,22 @@ uuid = { workspace = true, features = ["v4", "js"] }
 wasm-bindgen-test.workspace = true
 
 [features]
-default = ["http", "json", "reqwest_native_tls"]
+default = [
+  "http",
+  "json",
+  "reqwest",
+  "reqwest_deflate",
+  "reqwest_gzip",
+  "reqwest_native_tls",
+]
 debug = ["typespec_macros?/debug"]
 decimal = ["dep:rust_decimal"]
 derive = ["dep:typespec_macros"]
 http = ["typespec/http"]
 json = ["typespec/json"]
 reqwest = ["dep:reqwest"]
+reqwest_deflate = ["reqwest", "reqwest/deflate"]
+reqwest_gzip = ["reqwest", "reqwest/gzip"]
 reqwest_native_tls = ["reqwest", "reqwest/native-tls"]
 test = [] # Enables extra tracing including error bodies that may contain PII.
 tokio = ["tokio/sync", "tokio/time"]
@@ -78,11 +87,14 @@ required-features = ["derive"]
 
 [package.metadata.docs.rs]
 features = [
-  "derive",
+  "debug",
   "decimal",
+  "derive",
   "http",
   "json",
   "reqwest",
+  "reqwest_deflate",
+  "reqwest_gzip",
   "reqwest_native_tls",
   "tokio",
   "wasm_bindgen",
