--- a/sdk/servicebus/azure_messaging_servicebus/Cargo.toml
+++ b/sdk/servicebus/azure_messaging_servicebus/Cargo.toml
@@ -31,6 +31,9 @@ tracing.workspace = true
 url.workspace = true
 uuid.workspace = true
 
+[features]
+default = ["azure_core_amqp/default"]
+
 [dev-dependencies]
 azure_core_amqp = { workspace = true, features = ["test"] }
 azure_core_test = { workspace = true, features = ["tracing"] }
