Remove parity features (#2933)
Resolves #2750 and replaces #2811 by removing the `reqwest_rustls`
feature which was there only to enable
`reqwest/rustls-tls-native-roots-no-provider`. But using resolver v2 and
newer, dependents can already do that by just taking a dependency on
`reqwest` themselves to add that feature. In some cases, they may need
to import `azure_core` with `default-features=false`, but passing a
different `reqwest::Client` via our `TransportOptions` is easy.

Not only will this scale better, but should help avoid opinionated
feature selection that adversely impacts customers as with #2750.

--- a/sdk/core/azure_core/Cargo.toml
+++ b/sdk/core/azure_core/Cargo.toml
@@ -28,7 +28,7 @@ sha2 = { workspace = true, optional = true }
 tokio = { workspace = true, optional = true }
 tracing.workspace = true
 typespec = { workspace = true, features = ["http", "json"] }
-typespec_client_core = { workspace = true, features = [
+typespec_client_core = { workspace = true, default-features = false, features = [
   "derive",
   "http",
   "json",
@@ -54,6 +54,7 @@ default = [
   "reqwest",
   "reqwest_deflate",
   "reqwest_gzip",
+  "reqwest_native_tls",
 ]
 azurite_workaround = []
 debug = ["typespec_client_core/debug"]
@@ -61,11 +62,12 @@ decimal = ["typespec_client_core/decimal"]
 hmac_openssl = ["dep:openssl"]
 hmac_rust = ["dep:sha2", "dep:hmac"]
 reqwest = ["typespec_client_core/reqwest"]
-reqwest_deflate = ["typespec_client_core/reqwest_deflate"]
-reqwest_gzip = ["typespec_client_core/reqwest_gzip"]
-reqwest_rustls = ["typespec_client_core/reqwest_rustls"]
+reqwest_deflate = ["reqwest", "typespec_client_core/reqwest_deflate"]
+reqwest_gzip = ["reqwest", "typespec_client_core/reqwest_gzip"]
+reqwest_native_tls = ["reqwest", "typespec_client_core/reqwest_native_tls"]
 test = ["typespec_client_core/test"]
 tokio = ["dep:tokio", "typespec_client_core/tokio"]
+wasm_bindgen = ["typespec_client_core/wasm_bindgen"]
 xml = ["typespec_client_core/xml"]
 
 [lints]
@@ -80,8 +82,9 @@ features = [
   "reqwest",
   "reqwest_deflate",
   "reqwest_gzip",
-  "reqwest_rustls",
+  "reqwest_native_tls",
   "tokio",
+  "wasm_bindgen",
   "xml",
 ]
 
