--- a/sdk/typespec/typespec_client_core/Cargo.toml
+++ b/sdk/typespec/typespec_client_core/Cargo.toml
@@ -55,18 +55,23 @@ uuid = { workspace = true, features = ["v4", "js"] }
 wasm-bindgen-test.workspace = true
 
 [features]
-default = ["http", "json", "reqwest", "reqwest_deflate", "reqwest_gzip"]
+default = [
+  "http",
+  "json",
+  "reqwest",
+  "reqwest_deflate",
+  "reqwest_gzip",
+  "reqwest_native_tls",
+]
 debug = ["typespec_macros?/debug"]
 decimal = ["dep:rust_decimal"]
 derive = ["dep:typespec_macros"]
 http = ["typespec/http"]
 json = ["typespec/json"]
-reqwest = ["reqwest/native-tls"]
-reqwest_deflate = ["reqwest/deflate"]
-reqwest_gzip = ["reqwest/gzip"]
-reqwest_rustls = [
-  "reqwest/rustls-tls-native-roots-no-provider",
-] # Remove dependency on banned `ring` crate; requires manually configuring crypto provider.
+reqwest = ["dep:reqwest"]
+reqwest_deflate = ["reqwest", "reqwest/deflate"]
+reqwest_gzip = ["reqwest", "reqwest/gzip"]
+reqwest_native_tls = ["reqwest", "reqwest/native-tls"]
 test = [] # Enables extra tracing including error bodies that may contain PII.
 tokio = ["tokio/sync", "tokio/time"]
 wasm_bindgen = ["dep:wasm-bindgen-futures", "gloo-timers/futures"]
@@ -82,14 +87,15 @@ required-features = ["derive"]
 
 [package.metadata.docs.rs]
 features = [
-  "derive",
+  "debug",
   "decimal",
+  "derive",
   "http",
   "json",
   "reqwest",
   "reqwest_deflate",
   "reqwest_gzip",
-  "reqwest_rustls",
+  "reqwest_native_tls",
   "tokio",
   "wasm_bindgen",
   "xml",
