--- a/Cargo.toml
+++ b/Cargo.toml
@@ -49,6 +49,7 @@ version = "0.7.0"
 path = "sdk/typespec/typespec_macros"
 
 [workspace.dependencies.azure_core]
+default-features = false
 version = "0.28.0"
 path = "sdk/core/azure_core"
 
@@ -117,7 +118,6 @@ quote = "1.0.37"
 rand = "0.9.1"
 rand_chacha = "0.9"
 reqwest = { version = "0.12.23", features = [
-  "json",
   "stream",
 ], default-features = false }
 rust_decimal.version = "1.37.2"
