--- a/sdk/eventhubs/azure_messaging_eventhubs_checkpointstore_blob/Cargo.toml
+++ b/sdk/eventhubs/azure_messaging_eventhubs_checkpointstore_blob/Cargo.toml
@@ -1,3 +1,8 @@
+# Copyright (c) Microsoft Corp. All Rights Reserved.
+# Licensed under the MIT license. See LICENSE file in the project root for full license information.
+
+# cspell:ignore appender
+
 [package]
 name = "azure_messaging_eventhubs_checkpointstore_blob"
 version = "0.1.0"
@@ -26,10 +31,15 @@ tracing = { workspace = true }
 uuid = { workspace = true, features = ["v4", "serde"] }
 
 [dev-dependencies]
+azure_core_opentelemetry.workspace = true
 azure_core_test = { workspace = true, features = ["tracing"] }
 azure_identity.workspace = true
+opentelemetry.workspace = true
+opentelemetry-appender-tracing = { version = "0.30" }
+opentelemetry-stdout = { version = "0.30" }
+opentelemetry_sdk.workspace = true
 tokio.workspace = true
-tracing-subscriber.workspace = true
+tracing-subscriber = { workspace = true, features = ["env-filter", "fmt"] }
 
 [features]
 default = ["azure_core/default"]
