Adds Spin runtime and HTTP backend for WASI p2
Introduces an optional spin feature to enable a Spin-based async runtime and HTTP client when targeting wasm32-wasip2, allowing clients to run in Spin environments.

Wires runtime selection to use Spin on wasm with the feature enabled and falls back to existing backends otherwise. Adds workspace dependencies, updates the changelog, and provides VS Code tasks to build the WASI p2 target with Spin.

Note: sleep in the Spin runtime is currently a no-op pending stable WASI timing APIs.

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -1,22 +1,52 @@
 {
-  "tasks": [
-    {
-      "label": "Start docs site (requires nightly)",
-      "options": {
-        "cwd": "${workspaceFolder}"
-      },
-      "command": "cargo",
-      "args": [
-        "watch",
-        "-s",
-        "RUSTDOCFLAGS=\"--cfg=docsrs --enable-index-page -Z unstable-options\" cargo +nightly doc --all-features --workspace --no-deps",
-        "-s",
-        "http-server --index --port 8080 ./target/doc"
-      ],
-      "isBackground": true,
-      "problemMatcher": [
-        "$rustc"
-      ]
-    }
-  ]
+	"tasks": [
+		{
+			"label": "Start docs site (requires nightly)",
+			"options": {
+				"cwd": "${workspaceFolder}"
+			},
+			"command": "cargo",
+			"args": [
+				"watch",
+				"-s",
+				"RUSTDOCFLAGS=\"--cfg=docsrs --enable-index-page -Z unstable-options\" cargo +nightly doc --all-features --workspace --no-deps",
+				"-s",
+				"http-server --index --port 8080 ./target/doc"
+			],
+			"isBackground": true,
+			"problemMatcher": [
+				"$rustc"
+			]
+		},
+		{
+			"label": "build-wasi-p2-azure-core-spin",
+			"type": "shell",
+			"command": "cargo",
+			"args": [
+				"build",
+				"-p",
+				"azure_core",
+				"--target",
+				"wasm32-wasip2",
+				"--no-default-features",
+				"--features",
+				"spin,json,http"
+			]
+		},
+		{
+			"label": "build-wasi-p2-azure-core-spin",
+			"type": "shell",
+			"command": "cargo",
+			"args": [
+				"build",
+				"-p",
+				"azure_core",
+				"--target",
+				"wasm32-wasip2",
+				"--no-default-features",
+				"--features",
+				"spin"
+			]
+		}
+	]
 }
