--- a/sdk/typespec/typespec_client_core/Cargo.toml
+++ b/sdk/typespec/typespec_client_core/Cargo.toml
@@ -32,6 +32,8 @@ typespec_macros = { workspace = true, optional = true }
 url.workspace = true
 uuid.workspace = true
 wasm-bindgen-futures = { workspace = true, optional = true }
+spin-executor = { workspace = true, optional = true }
+spin-sdk = { workspace = true, optional = true }
 
 [target.'cfg(not(target_family = "wasm"))'.dependencies]
 tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time"] }
@@ -75,6 +77,7 @@ reqwest_native_tls = ["reqwest", "reqwest/native-tls"]
 test = [] # Enables extra tracing including error bodies that may contain PII.
 tokio = ["tokio/sync", "tokio/time"]
 wasm_bindgen = ["dep:wasm-bindgen-futures", "gloo-timers/futures"]
+spin = ["dep:spin-executor", "dep:spin-sdk"]
 xml = ["dep:quick-xml"]
 
 [[example]]
