Scopes spin backend to wasm32-wasip2
- Limits spin dependencies and HTTP client/runtime to wasm32-wasip2 and selects them on WASI.
- Excludes reqwest on wasm32-wasip2 while keeping it on other targets.
- Auto-enables the spin feature via target-specific dependency in the core crate.
- Improves target correctness, avoids incompatible deps, and reduces WASI build surface.

--- a/sdk/core/azure_core/Cargo.toml
+++ b/sdk/core/azure_core/Cargo.toml
@@ -95,6 +95,15 @@ features = [
   "xml",
 ]
 
+# On wasm32-wasi targets, auto-enable the spin backend in the dependency.
+[target.wasm32-wasip2.dependencies]
+typespec_client_core = { workspace = true, default-features = false, features = [
+  "derive",
+  "http",
+  "json",
+  "spin",
+] }
+
 [[bench]]
 name = "benchmarks"
 harness = false
