--- a/sdk/typespec/typespec_client_core/Cargo.toml
+++ b/sdk/typespec/typespec_client_core/Cargo.toml
@@ -20,7 +20,6 @@ gloo-timers = { workspace = true, optional = true }
 pin-project.workspace = true
 quick-xml = { workspace = true, optional = true }
 rand.workspace = true
-reqwest = { workspace = true, optional = true }
 rust_decimal = { workspace = true, optional = true }
 serde.workspace = true
 serde_json.workspace = true
@@ -32,8 +31,6 @@ typespec_macros = { workspace = true, optional = true }
 url.workspace = true
 uuid.workspace = true
 wasm-bindgen-futures = { workspace = true, optional = true }
-spin-executor = { workspace = true, optional = true }
-spin-sdk = { workspace = true, optional = true }
 
 [target.'cfg(not(target_family = "wasm"))'.dependencies]
 tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time"] }
@@ -41,6 +38,15 @@ tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time"] }
 [target.'cfg(target_family = "wasm")'.dependencies]
 getrandom.workspace = true
 tokio = { workspace = true, features = ["macros", "rt", "time"] }
+
+# Limit spin-* deps to wasm32-wasip2
+[target.wasm32-wasip2.dependencies]
+spin-executor = { workspace = true, optional = true }
+spin-sdk = { workspace = true, optional = true }
+
+# Only include reqwest on targets other than wasm32-wasip2.
+[target.'cfg(not(target = "wasm32-wasip2"))'.dependencies]
+reqwest = { workspace = true, optional = true }
 
 [dev-dependencies]
 tracing.workspace = true
