--- a/sdk/typespec/typespec_client_core/Cargo.toml
+++ b/sdk/typespec/typespec_client_core/Cargo.toml
@@ -12,6 +12,7 @@ keywords = ["typespec"]
 
 [dependencies]
 async-trait.workspace = true
+cfg-if.workspace = true
 base64.workspace = true
 bytes.workspace = true
 dyn-clone.workspace = true
