--- a/sdk/storage/azure_storage_blob/Cargo.toml
+++ b/sdk/storage/azure_storage_blob/Cargo.toml
@@ -20,6 +20,7 @@ default = ["azure_core/default"]
 async-trait.workspace = true
 azure_core = { workspace = true, features = ["xml"] }
 serde.workspace = true
+serde_json.workspace = true
 typespec_client_core = { workspace = true, features = ["derive"] }
 url.workspace = true
 uuid.workspace = true
