move some dependencies to root Cargo.toml so update-cratenames.rs finds them

--- a/sdk/core/azure_core/Cargo.toml
+++ b/sdk/core/azure_core/Cargo.toml
@@ -49,10 +49,7 @@ reqwest.workspace = true
 thiserror.workspace = true
 tokio.workspace = true
 tracing-subscriber.workspace = true
-ureq = { version = "3", default-features = false, features = [
-  "gzip",
-  "native-tls",
-] }
+ureq.workspace = true
 
 [features]
 default = [
