--- a/sdk/core/azure_core/Cargo.toml
+++ b/sdk/core/azure_core/Cargo.toml
@@ -49,7 +49,10 @@ reqwest.workspace = true
 thiserror.workspace = true
 tokio.workspace = true
 tracing-subscriber.workspace = true
-ureq.workspace = true
+ureq = { version = "3", default-features = false, features = [
+  "gzip",
+  "native-tls",
+] }
 
 [features]
 default = [
