Add `RawResponse` to `ErrorKind::HttpResponse`
Renames `RawResponse` to `BufResponse` - inspired by `std::io::BufReader`, and adds a new `RawResponse` where the body is fully read and stored in `Bytes`.
Refactored `Headers` and other types necessary to add `RawResponse` to `ErrorKind::HttpResponse`.

Fixes #2962
Fixes #2495
Relates to #2725
Relates to #1995

--- a/sdk/typespec/Cargo.toml
+++ b/sdk/typespec/Cargo.toml
@@ -13,6 +13,9 @@ keywords = ["typespec"]
 
 [dependencies]
 base64.workspace = true
+bytes.workspace = true
+futures.workspace = true
+quick-xml = { workspace = true, optional = true }
 serde = { workspace = true, optional = true }
 serde_json = { workspace = true, optional = true }
 url.workspace = true
@@ -25,6 +28,7 @@ default = ["http", "json"]
 amqp = []
 http = []
 json = ["dep:serde", "dep:serde_json"]
+xml = ["dep:quick-xml"]
 
 [lints]
 workspace = true
