Various small clean-up operations
Among other things, this also removes `log` from the workspace `Cargo.toml`.
Nothing was referencing it, and looking at `git blame` I can find no reason I added it with only a major.minor version in 78ac814e.
A review of `Cargo.toml` shows that I added a couple in explicitly - `litemap` and `zerofrom` - to satisfy some Dependabot issues in case the `Cargo.lock` file is every regenerated, but those are full semvers.
`log` first appeared in `Cargo.lock` when I first committed it to the repo.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -106,7 +106,6 @@ getrandom = { version = "0.3" }
 gloo-timers = { version = "0.3" }
 hmac = { version = "0.12" }
 litemap = "0.7.4"
-log = "0.4"
 openssl = { version = "0.10.72" }
 opentelemetry = { version = "0.30", features = ["trace"] }
 opentelemetry_sdk = "0.30"
@@ -120,7 +119,7 @@ rand_chacha = "0.9"
 reqwest = { version = "0.12.23", features = [
   "stream",
 ], default-features = false }
-rust_decimal.version = "1.37.2"
+rust_decimal = "1.37.2"
 rustc_version = "0.4"
 serde = { version = "1.0", features = ["derive"] }
 serde_amqp = { version = "0.14", features = ["uuid"] }
