--- a/sdk/storage/azure_storage_blob/Cargo.toml
+++ b/sdk/storage/azure_storage_blob/Cargo.toml
@@ -21,6 +21,7 @@ async-trait.workspace = true
 azure_core = { workspace = true, features = ["xml"] }
 serde.workspace = true
 serde_json.workspace = true
+time.workspace = true
 typespec_client_core = { workspace = true, features = ["derive"] }
 url.workspace = true
 uuid.workspace = true
