--- a/sdk/template/ci.yml
+++ b/sdk/template/ci.yml
@@ -13,6 +13,7 @@ trigger:
 extends:
   template: /eng/pipelines/templates/stages/archetype-sdk-client.yml
   parameters:
+    TestPipeline: true
     ServiceDirectory: template
     Artifacts:
     - name: azure_template_core
