--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,8 +18,8 @@ members = [
   "sdk/keyvault/azure_security_keyvault_keys",
   "sdk/keyvault/azure_security_keyvault_secrets",
   "sdk/servicebus/azure_messaging_servicebus",
-  "sdk/template/azure_template_core",
-  "sdk/template/azure_template",
+  "sdk/canary/azure_canary_core",
+  "sdk/canary/azure_canary",
   "sdk/storage/azure_storage_common",
   "sdk/storage/azure_storage_blob",
 ]
