--- a/sdk/canary/azure_canary_core/Cargo.toml
+++ b/sdk/canary/azure_canary_core/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "azure_canary_core"
 version = "0.2.0"
-description = "Template crate for Azure SDK pipeline testing"
+description = "Canary crate for Azure SDK pipeline testing"
 authors.workspace = true
 edition.workspace = true
 license.workspace = true
