--- a/eng/pipelines/templates/stages/archetype-sdk-client.yml
+++ b/eng/pipelines/templates/stages/archetype-sdk-client.yml
@@ -84,7 +84,7 @@ extends:
           ServiceDirectory: ${{ parameters.ServiceDirectory }}
           PipelineArtifactName: packages
           Artifacts: ${{ parameters.Artifacts }}
-          TestPipeline: ${{ eq(parameters.ServiceDirectory, 'template') }}
+          TestPipeline: ${{ eq(parameters.ServiceDirectory, 'canary') }}
           TestTimeoutInMinutes: ${{ parameters.TestTimeoutInMinutes }}
           TestProxy: ${{ parameters.TestProxy }}
           MatrixConfigs:
@@ -149,5 +149,5 @@ extends:
               DependsOn: "Build"
               ServiceDirectory: ${{ parameters.ServiceDirectory }}
               Artifacts: ${{ parameters.Artifacts }}
-              TestPipeline: ${{ eq(parameters.ServiceDirectory, 'template') }}
+              TestPipeline: ${{ eq(parameters.ServiceDirectory, 'canary') }}
               PipelineArtifactName: packages
