--- a/sdk/canary/azure_canary_core/Cargo.toml
+++ b/sdk/canary/azure_canary_core/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
-name = "azure_template_core"
-version = "0.2.0"
-description = "Template crate for Azure SDK pipeline testing"
+name = "azure_canary_core"
+version = "0.1.0"
+description = "Canary crate for Azure SDK pipeline testing"
 authors.workspace = true
 edition.workspace = true
 license.workspace = true
@@ -11,7 +11,7 @@ rust-version.workspace = true
 [dependencies]
 
 [dev-dependencies]
-azure_template.path = "../azure_template"
+azure_canary.path = "../azure_canary"
 
 [lints]
 workspace = true
