--- a/sdk/canary/ci.yml
+++ b/sdk/canary/ci.yml
@@ -8,12 +8,12 @@ trigger:
     - release/*
   paths:
     include:
-    - sdk/template/
+    - sdk/canary/
 
 extends:
   template: /eng/pipelines/templates/stages/archetype-sdk-client.yml
   parameters:
-    ServiceDirectory: template
+    ServiceDirectory: canary
     Artifacts:
     - name: azure_canary_core
       safeName: AzureTemplateCore
